# Coursework

./: .env_template  README.md  pyproject.toml
data/: report_20250215_155318.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
