[project]
name = "coursework"
version = "0.1.0"
description = ""
authors = [
    {name = "artem",email = "artemignatuk78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas-stubs (>=2.2.3.241126,<3.0.0.0)",
    "types-requests (>=2.32.0.20241016,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''


[tool.isort]
profile = "black"
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]
